--- a/SmartWMS/SmartWMS.csproj
+++ b/SmartWMS/SmartWMS.csproj
@@ -31,6 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
@@ -75,6 +77,9 @@
     <EmbeddedResource Update="UserView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\StorageLocationDetailView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="MainPageMenu.xaml.cs" />
@@ -82,6 +87,9 @@
   <ItemGroup>
     <Compile Update="OperationViews\GoodsReceiptView.xaml.cs">
       <DependentUpon>GoodsReceiptView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\StorageLocationDetailView.xaml.cs">
+      <DependentUpon>StorageLocationDetailView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
