TrolleyTourView implemented, stock unit added

--- a/SmartWMS/SmartWMS.csproj
+++ b/SmartWMS/SmartWMS.csproj
@@ -62,6 +62,9 @@
     <EmbeddedResource Update="OperationViews\StorageTaskView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="OperationViews\TablesView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="OperationViews\TrolleyTourView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
