--- a/SmartWMS.iOS/SmartWMS.iOS.csproj
+++ b/SmartWMS.iOS/SmartWMS.iOS.csproj
@@ -127,6 +127,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microcharts.Forms">
+      <Version>0.9.5.7</Version>
+    </PackageReference>
     <PackageReference Include="SQLiteNetExtensions">
       <Version>2.1.0</Version>
     </PackageReference>
